fix pixel bug in embedded overlay on mobile

--- a/app/assets/stylesheets/pageflow/embedded_video.css.scss
+++ b/app/assets/stylesheets/pageflow/embedded_video.css.scss
@@ -201,7 +201,7 @@
         }
 
         &:before {
-          background-color: initial;
+          content: initial;
         }
       }
     }
